[Win] deviceorientation: fix euler angles order.

Currently the alpha, beta and gamma angles are not reported in
correct order. This patch fixes this. On windows the following
applies: Z-axis - alpha, X-axis - beta, Y-axis - gamma.

BUG=612434

Review-Url: https://codereview.chromium.org/1991773002
Cr-Commit-Position: refs/heads/master@{#394442}

Former-commit-id: 28728e3f6dd412ae82ae14b9c14036e545cc881b